# GoCallOnnx

./: README.md  go.mod  infer  main  main.go  server.go
InferServer/: infer copy.cpp  infer.cpp  infer.h
include/: CMakeLists.txt  infer.cpp  infer.h  inferCifar.cpp  inferDebias.cpp
include/infer_servers/: CMakeLists.txt  infer.h  inferCifar.cpp
include/lib/: CMakeLists.txt
infer/: infer.go
inferData/: ref.txt
server/: server.go
test/: inferCifar_1.cpp  inferCifar_2.cpp
